Authentication and Sessions

--- a/lib/chat_app_web/templates/layout/root.html.heex
+++ b/lib/chat_app_web/templates/layout/root.html.heex
@@ -6,16 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="csrf-token" content={csrf_token_value()}>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap-theme.min.css" integrity="sha384-6pzBo3FDv/PJ8r2KRkGHifhEocL+1X2rVCTTkUfGk7/0pbek5mMa1upzvWbrUbOZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     <%= live_title_tag assigns[:page_title] || "ChatApp", suffix: " · Phoenix Framework" %>
     <link phx-track-static rel="stylesheet" href={Routes.static_path(@conn, "/assets/app.css")}/>
     <script defer phx-track-static type="text/javascript" src={Routes.static_path(@conn, "/assets/app.js")}></script>
   </head>
   <body>
-    <header>
+    <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 bg-dark">
+    <h3 class="my-0 mr-md-auto font-weight-normal">
+      <%= link "Chat App", to: Routes.room_path(@conn, :index), class: "navbar-brand text-light" %>
+    </h3>
+    <%= if ChatApp.Accounts.user_signed_in?(@conn) do %>
+      <nav class="text-light my-2 my-md-0 mr-md-3">
+        Signed in as: <strong ><%= ChatApp.Accounts.current_user(@conn).username %></strong>
+      </nav>
+    <%= link "Sign Out", to: Routes.session_path(@conn, :delete), method: :delete, class: "btn btn-outline-primary"%>
+   <% else %>
+    <%= link "Sign Up", to: Routes.registration_path(@conn, :new), class: "btn btn-outline-primary ml-md-3"%>
+    <%= link "Login", to: Routes.session_path(@conn, :new), class: "btn btn-outline-info ml-md-3"%>
 
-    </header>
+    <% end %>
+  </div>
     <%= @inner_content %>
   </body>
 </html>
