--- a/lib/chat_app_web/templates/layout/root.html.heex
+++ b/lib/chat_app_web/templates/layout/root.html.heex
@@ -10,6 +10,7 @@
 
     <%= live_title_tag assigns[:page_title] || "ChatApp", suffix: " · Phoenix Framework" %>
     <link phx-track-static rel="stylesheet" href={Routes.static_path(@conn, "/assets/app.css")}/>
+    <script>window.userToken = "<%= assigns[:user_token] %>";</script>
     <script defer phx-track-static type="text/javascript" src={Routes.static_path(@conn, "/assets/app.js")}></script>
   </head>
   <body>
