--- a/lib/chat_app_web/templates/room/show.html.heex
+++ b/lib/chat_app_web/templates/room/show.html.heex
@@ -1,11 +1,37 @@
-<h2>Room Details</h2>
+<h2><%= @room.name %></h2>
 
-<h3> Room Name: <%= @room.name %> </h3>
-<h3> Description: <%= @room.description %> </h3>
-
+<span><%= @room.description %></span>
+<%= if AuthUser.can_access?(@current_user, @room) do %>
 <div>
+    <%= link "Edit", to: Routes.room_path(@conn, :edit, @room.id), class: "btn btn-success" %>
+    <%= link "Delete", to: Routes.room_path(@conn, :delete, @room), method: :delete, data: [confirm: "Do you really want to Delete?"], class: "btn btn-danger" %>
+</div>
+<% end %>
+<div class="row">
+    <div class="col-md-9">
+        <ul class="list-group mt-5" id="display"></ul>
 
-<%= link "Edit", to: Routes.room_path(@conn, :edit, @room.id), class: "btn btn-primary" %>
-<%= link "Delete", to: Routes.room_path(@conn, :delete, @room), method: :delete, data: [confirm: "Do you want to delete it?"], class: "btn btn-danger" %>
+        <form class="input-group mt-3" id="message-form">
+            <input type="text" class="form-control" id="message-body"
+                placeholder="Input message for room">
+            <div class="input-group-append">
+                <button class="btn btn-outline-info" id="message-button">Send</button>
+            </div>
+        </form>
+    </div>
+    <div class="col-md-3">
+        <div class="card">
+            <div class="card-header text-white bg-secondary">
+                Users Online:
+            </div>
+            <div class="card-body">
+                <div id="users-online"></div>
+            </div>
+        </div>
+    </div>
 
 </div>
+
+<script>
+    window.roomId = "<%= @room.id %>"
+</script>
